Refactored sms_send to retrieve reports from a single source only.
- Added config parameter for specifying the source.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-URL =
-SERVER =
-PORT =
+URL = http://localhost:3001/api/v1/reports/age-disaggregates
+SERVER = localhost
+PORT = 3002
 ENCRYPTION_KEY= 
-EMR_API_PROTOCOL=http
-EMR_API_HOST=
-EMR_API_PORT=3000
-EMR_API_USERNAME=
-EMR_API_PASSWORD=
+REPORTING_API_TYPE=emr # Options are emr, emastercard
+REPORTING_API_PROTOCOL=http
+REPORTING_API_HOST=
+REPORTING_API_PORT=3000
+REPORTING_API_USERNAME=
+REPORTING_API_PASSWORD=
